--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name":"PWA Tutorial",
-  "short_name":"PWA",
+  "name":"Claritox Pro™ {Official} Pay Only $49/Bottle + Free Shipping",
+  "short_name":"Claritox Pro™",
   "start_url":"index.html",
   "display":"standalone",
   "background_color":"#5900b3",
   "theme_color":"#FF5733",
   "scope": ".",
-  "description":"This is a PWA tutorial.",
+  "description":"Claritox Pro is a daily supplement to improve balance and prevent users from experiencing dizziness.",
   "icons":[
   {
   "src":"icons/favicon-192x192.png",                     
